--- a/GameMathematics/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/GameMathematics/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1,4 +1,5 @@
 [/Script/UnrealEd.LevelEditorPlaySettings]
+LastExecutedPlayModeType=PlayMode_Simulate
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Air 13\"",Width=1440,Height=900,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
 LaptopScreenResolutions=(Description="Apple MacBook Pro 13\"",Width=1280,Height=800,AspectRatio="16:10",bCanSwapAspectRatio=True,ProfileName="")
@@ -77,7 +78,7 @@ MRUItem0=/Game/Levels/2DMathematics
 LastLevel=/Engine/Maps/Templates/Template_Default
 
 [ModuleFileTracking]
-GameMathematics.TimeStamp=2021.05.15-15.49.40
+GameMathematics.TimeStamp=2021.05.15-17.27.28
 GameMathematics.LastCompileMethod=Runtime
 
 [AssetEditorSubsystem]
@@ -130,6 +131,25 @@ BP_Sky_Sphere_C.Replication=True
 BP_Sky_Sphere_C.Collision=True
 BP_Sky_Sphere_C.Input=True
 BP_Sky_Sphere_C.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Camera=True
+CameraActor.PostProcess=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Collision=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.Actor=True
+BP_ShipPawn_C.ShipPawn=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_ShipPawn
@@ -141,5 +161,6 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/Blueprints/BP_ShipPawn.BP_ShipPawn;
 
